1. Changed class names of <h1> and <p> element inside carousel to make class names more specific, 2. removed width property of bg-light class and also added some paddings to the container-form class and map id to fix an issue with contents overflowing from the page while viewing the page on small devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,10 @@ scroll-behavior: smooth;
 
 body{
     margin: 0;
+    padding: 0;
     font-size: 1rem;
     line-height: 1.5;
-    overflow-x: hidden;
+    overflow-x: hidden;    
 }
 /*---------------Specials---------------*/
 #scrollToTop{
@@ -58,7 +59,6 @@ body{
 .bg-light {
   background-color: #254c54 !important;
   z-index: 2;
-  width: 100vw;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -165,6 +165,7 @@ padding-top: 2%;
 .container-carousel{
     padding-top: 8%;
     padding-left: 0;
+    padding-right: 0;
 }
 
 #carouseIndicators {
@@ -195,16 +196,18 @@ padding-top: 2%;
     background: #7c9473;
 }
 
-.heading-carousel{
+.carouselText{
     margin-left: 5%;
     padding-top: 8%;
 }
 
-.heading-sub-carousel{
+.carouselTextSub{
     padding-right: 10px;
     padding-left: 5%;
     padding-top: 3%;
 }
+
+
 
 .carouselImage1{
     background: url("../images/lumbini.jpg");
@@ -310,8 +313,9 @@ padding-bottom: 10%;
     height: 600px;
     width: 100%;
     border: 2px solid white;
-    margin-left: -5px;
     margin-top: -175px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 /*-------------------------------Contact Page-------------------*/
@@ -322,7 +326,6 @@ padding-bottom: 10%;
 .container-form{
     position: relative;
     width: 100%;
-    padding-left: 0;
     padding-top: 5%;
     padding-bottom: 5%;
 }
@@ -458,6 +461,16 @@ padding-top: 15px;
 }
 
 /*------------------Media Queries--------*/
+
+@media screen and (min-width: 1200px){
+    .heading-info{
+    margin-bottom: -10px;
+}
+
+.heading-sub-info{
+    margin-bottom: -10px;
+}
+}
 
 @media screen and (max-width: 992px){
     .navbar-nav{
